# ros-repo-1

./: .gitignore  README.md  prompt.md  requirements.txt
Docs/: COMMUNICATION_ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  DIRECTORY_STRUCTURE.md  ENTITY_EXTRACTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROMPTS_FOR_AI.md  ROS_Project_Office_robot_service.md
ai_server/: .env.example  INTEGRATION_GUIDE.md  README.md  __init__.py  config.py  llm_server.py  server.py  start_ai_server.sh  test_client.py  test_webcam.py  vision_server.py
common/: ai_llm.proto  ai_vision.proto  robot_task_events.py
main_server/: app.py  config.py  container.py
robot/: INTEGRATION_GUIDE.md  README.md  ROBOT_HANDOFF.md
robot/jazzy_ws/src/communication_node/: package.xml  setup.py
robot/jazzy_ws/src/communication_node/communication_node/: __init__.py  bridge_node.py
robot/jazzy_ws/src/communication_node/launch/: bridge.launch.py
robot/jazzy_ws/src/communication_node/resource/: communication_node
robot/jazzy_ws/src/office_robot_bringup/: package.xml  setup.cfg  setup.py
robot/jazzy_ws/src/office_robot_bringup/config/: executor.yaml
robot/jazzy_ws/src/office_robot_bringup/launch/: bringup.launch.py
robot/jazzy_ws/src/office_robot_bringup/resource/: office_robot_bringup
scripts/: demo_structured_response.sh  start_db.sql  udp_receiver_min.py
tests/: README.md  test_cache_performance.py  test_communication.py  test_entity_extraction_grpc.py  test_entity_extraction_simple.py  test_face_recognition_webcam.py  test_structured_response.py  test_structured_response_grpc.py  (+1 more)
(+129 files in other folders)
