<?xml version="1.0"?>
<package format="3">
  <name>office_robot_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch and params for office robot.</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>office_robot_executor</exec_depend>
  <exec_depend>office_robot_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
